--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint \"**/*.js\" --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-native-fontawesome": "^0.2.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-svg": "^9.13.6",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "styled-components": "^4.4.1"
